tests/compile-fail/suzu_translate_conflicts_source.stderr
error: `translate` conflicts with `source(...)` — `translate` generates `source(from(...))` automatically
 --> tests/compile-fail/suzu_translate_conflicts_source.rs:6:5
  |
6 |     #[suzu(translate, source(from(String, suzunari_error::DisplayError::new)))]
  |     ^
